# KitchenIO

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
custom_components/kitchenio/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml  shopping_sync.py  strings.json
docs/: home-assistant.md
kitchenio/: __main__.py  app.py
kitchenio/static/: dialogs.js  styles.css  tabs.js
kitchenio/templates/: index.html  settings.html
tests/: test_api.py  test_home_assistant_integration.py  test_settings.py  test_ui.py
